--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Raju Agro - A farmer's trusted partner since 1988 in Veppanapalli, Krishnagiri." />
   
-  <meta name="google-site-verification" content="googleb83d5434b6e0dbde" />
-
+  <meta name="google-site-verification" content="lp6PBJbX_2JtI1G-VZ6o9s5tY1_acuNwRywX_9gTrAc" />
+  
+  <meta name="description" content="Raju Agro - A farmer's trusted partner since 1988 in Veppanapalli, Krishnagiri." />
   <title>Raju Agro - Farmer's Trusted Partner</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
